# pg-transformers

./: .gitignore  README.md  models.toml  pyproject.toml
.github/workflows/: build-image-31.yml  build-image.yml  ci.yml
bench/: native_cpu.py  node_wasm.js
docker/: Dockerfile  Dockerfile.plv31  compose.build.yml  compose.yml
docs/: adding-a-model.md  kernel-notes.md
docs/deployment/: README.md  requirements.md
docs/deployment/notes/: aws-aurora.md  aws-rds.md  self-hosted.md
kernel/: Cargo.toml  build.rs  build.sh
kernel/src/: lib.rs
pg_transformers/: __init__.py  cli.py  export.py  load.py  maps.py  reference_texts.py  registry.py  spm_mirror.py  verify.py
sql/: pg_transformers.sql  probe.sql
tests/: diagnose_spm.py  test_edge_cases.py  test_parity.py
