[package]
name = "pgt-kernel"
version = "0.1.0"
edition = "2021"
description = "Encoder forward pass for wasm32+simd128, configured from ../models.toml"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
libm = "0.2"

[build-dependencies]
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
